fix(checkbox): Align Required Asterisk with Checkbox and Label (#4991)

--- a/ui/components/checkbox/base/_touch.scss
+++ b/ui/components/checkbox/base/_touch.scss
@@ -1,9 +1,12 @@
 .slds-checkbox {
 
+  > .slds-required {
+    line-height: inherit;
+  }
+
   .slds-checkbox_faux,
   .slds-checkbox--faux {
     @include square($square-tappable-x-small);
-    flex-shrink: 0; // Contained within flex, we don't want checkbox to shrink
   }
 
   .slds-checkbox__label {
